--- a/index.html
+++ b/index.html
@@ -5,45 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hover Animation Cards</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body {
-            background-color: #f7f7f7;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .card-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            justify-items: center;
-            margin-top: 40px;
-            max-width: 1140px;
-            margin: auto;
-        }
-
-        .heading {
-            font-size: 48px;
-            font-weight: bold;
-        }
-
-        .card {
-            background-color: #fff;
-            width: 230px;
-            height: 250px;
-            position: relative;
-            perspective: 1000px;
-            cursor: pointer;
-            border-radius: 10px;
-            overflow: hidden;
-            transition: all 0.4s ease-in-out;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-        }
-
         .card-inner {
-            position: absolute;
-            width: 100%;
-            height: 100%;
             transition: transform 0.7s;
             transform-style: preserve-3d;
         }
@@ -54,34 +18,11 @@
 
         .card-front,
         .card-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
             backface-visibility: hidden;
         }
 
-        .card-front {
-            background-color: bisque;
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-            font-size: 30px;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
         .card-back {
-            background: linear-gradient(45deg, #ff8c00, #ff69b4);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
             transform: rotateY(180deg);
-        }
-
-        .card:hover {
-            transform: rotateX(10deg) rotateY(-10deg);
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
         }
 
         .card::before {
@@ -116,62 +57,67 @@
                 box-shadow: 0 0 15px #ff69b4, 0 0 25px #ff8c00;
             }
         }
-
-        .card-back h2 {
-            font-size: 40px;
-        }
-
-        @media(max-width:576px) {
-            .heading {
-                font-size: 31px;
-            }
-        }
     </style>
 </head>
 
-<body>
-    <div>
-        <h1 class="heading">✨ Advanced Hover Animated Card Gallery ✨</h1>
-        <div class="card-container">
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">Hover</div>
-                    <div class="card-back">
-                        <h2>Card 1</h2>
+<body class="bg-gray-100">
+    <div class="flex flex-col items-center justify-center min-h-screen pb-10">
+        <h1 class="font-extrabold mb-10 text-5xl max-sm:text-3xl text-center">✨ Advanced Hover Animated Card Gallery ✨</h1>
+        <div class="gap-5 flex flex-wrap max-lg:justify-center">
+            <div
+                class="card relative bg-white rounded-lg overflow-hidden transition-all duration-700 shadow-lg w-56 h-64">
+                <div class="card-inner absolute w-full h-full">
+                    <div
+                        class="card-front bg-gray-100 text-3xl text-center flex justify-center items-center absolute w-full h-full shadow-md">
+                        Hover
+                    </div>
+                    <div
+                        class="card-back absolute w-full h-full flex justify-center items-center text-white bg-gradient-to-br from-orange-500 to-pink-500">
+                        <h2 class="text-4xl">Card 1</h2>
                     </div>
                 </div>
             </div>
-
-            <!-- Card 2 -->
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">Hover</div>
-                    <div class="card-back">
-                        <h2>Card 2</h2>
+            <div
+                class="card relative bg-white rounded-lg overflow-hidden transition-all duration-700 shadow-lg w-56 h-64">
+                <div class="card-inner absolute w-full h-full">
+                    <div
+                        class="card-front bg-gray-100 text-3xl text-center flex justify-center items-center absolute w-full h-full shadow-md">
+                        Hover
+                    </div>
+                    <div
+                        class="card-back absolute w-full h-full flex justify-center items-center text-white bg-gradient-to-br from-orange-500 to-pink-500">
+                        <h2 class="text-4xl">Card 2</h2>
                     </div>
                 </div>
             </div>
-            <!-- Card 3 -->
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">Hover</div>
-                    <div class="card-back">
-                        <h2>Card 3</h2>
+            <div
+                class="card relative bg-white rounded-lg overflow-hidden transition-all duration-700 shadow-lg w-56 h-64">
+                <div class="card-inner absolute w-full h-full">
+                    <div
+                        class="card-front bg-gray-100 text-3xl text-center flex justify-center items-center absolute w-full h-full shadow-md">
+                        Hover
+                    </div>
+                    <div
+                        class="card-back absolute w-full h-full flex justify-center items-center text-white bg-gradient-to-br from-orange-500 to-pink-500">
+                        <h2 class="text-4xl">Card 3</h2>
                     </div>
                 </div>
             </div>
-            <!-- Card 4 -->
-            <div class="card">
-                <div class="card-inner">
-                    <div class="card-front">Hover</div>
-                    <div class="card-back">
-                        <h2>Card 4</h2>
+            <div
+                class="card relative bg-white rounded-lg overflow-hidden transition-all duration-700 shadow-lg w-56 h-64">
+                <div class="card-inner absolute w-full h-full">
+                    <div
+                        class="card-front bg-gray-100 text-3xl text-center flex justify-center items-center absolute w-full h-full shadow-md">
+                        Hover
+                    </div>
+                    <div
+                        class="card-back absolute w-full h-full flex justify-center items-center text-white bg-gradient-to-br from-orange-500 to-pink-500">
+                        <h2 class="text-4xl">Card 4</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
