--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 
 <body class="bg-gray-100">
-    <div class="flex flex-col items-center justify-center min-h-screen pb-10">
+    <div class="flex flex-col items-center justify-center min-h-screen py-10">
         <h1 class="font-extrabold mb-10 text-5xl max-sm:text-3xl text-center">✨ Advanced Hover Animated Card Gallery ✨</h1>
         <div class="gap-7 flex flex-wrap max-lg:justify-center">
             <div
